[package]
name = "htmlparser"
version = "0.2.1"
edition = "2018"
authors = ["Jeremie Drouet <jeremie.drouet@gmail.com>"]
categories = ["parser-implementations"]
description = "Pull-based, zero-allocation HTML parser."
documentation = "https://docs.rs/htmlparser/"
keywords = ["html", "parser", "tokenizer"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jdrouet/htmlparser.git"
homepage = "https://github.com/jdrouet/htmlparser"

[features]
default = []
std = []
